[gd_scene load_steps=4 format=2]

[ext_resource path="res://SlingShot.gd" type="Script" id=1]
[ext_resource path="res://assets/slingshot.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 49.0102

[node name="SlingShot" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftLine" type="Line2D" parent="."]
position = Vector2( 14, -41 )
points = PoolVector2Array( 0, 0, -100, 0 )
default_color = Color( 0.113725, 0.054902, 0.00392157, 1 )

[node name="SlingShot" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RightLine" type="Line2D" parent="."]
position = Vector2( 14, -41 )
points = PoolVector2Array( -27, 0, -100, 0 )
default_color = Color( 0.113725, 0.054902, 0.00392157, 1 )

[node name="CenterOfSlinghot" type="Position2D" parent="."]
position = Vector2( 1, -40 )

[node name="GrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2( -2, -36 )
shape = SubResource( 1 )

[connection signal="input_event" from="GrabArea" to="." method="_on_GrabArea_input_event"]
